--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
-
+selector
+p{
+  color:blue;
+}
+declaration block 
+p{
+  color:blue;
+}
+delaration 
+p{
+  color:blue;
+}
+property
+p{
+  color:blue;
+}
+value
+p{
+  color:blue;
+}
